--- a/backend-api/supervisord.conf
+++ b/backend-api/supervisord.conf
@@ -5,12 +5,12 @@ nodaemon=true
 command=php artisan octane:start --server=frankenphp --host=0.0.0.0 --port=8000
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/supervisor/octane.err.log
-stdout_logfile=/var/log/supervisor/octane.out.log
+redirect_stderr=true
+stdout_logfile=/var/log/supervisor/octane.log
 
 [program:queue]
-command=php artisan queue:work --tries=3 --timeout=90
+command=php artisan queue:work
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/supervisor/queue.err.log
-stdout_logfile=/var/log/supervisor/queue.out.log
+redirect_stderr=true
+stdout_logfile=/var/log/supervisor/queue.log
