--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
 services:
   issues-tracker-backend:
+    container_name: issues-tracker-backend
+    image: issues-tracker-backend:latest
     build: 
       context: ./backend-api
     ports:
     - "8081:8081"
     networks:
-      - issues-tracker-networks
+      - postgres-network
 
   issues-tracker-frontend:
+    container_name: issues-tracker-frontend
+    image: issues-tracker-frontend:latest
     build:
       context: ./vue
     ports:
       - "8082:8082"
     depends_on:
       - issues-tracker-backend
-    networks:
-      - issues-tracker-networks
 
 networks:
-  issues-tracker-network:
-    name: issues-tracker-network
-    driver: bridge
+  postgres-network:
+    name: postgres-network
+    external: true
