--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports:
     - "8081:8081"
     networks:
+      - issues-tracker-network
       - postgres-network
 
   issues-tracker-frontend:
@@ -18,8 +19,14 @@ services:
       - "8082:8082"
     depends_on:
       - issues-tracker-backend
+    networks:
+      - issues-tracker-network
 
 networks:
+  issues-tracker-network:
+    name: issues-tracker-network
+    driver: bridge
+    
   postgres-network:
     name: postgres-network
     external: true
