--- a/issues-tracker.conf
+++ b/issues-tracker.conf
@@ -21,7 +21,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/gmedia.adrfstwn.cloud/privkey.pem;
 
     location / {
-        proxy_pass http://issues-tracker-frontend:8080;
+        proxy_pass http://issues-tracker-frontend:8080; #
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
